# PodstawyProgramowania2

./: .gitignore  README.md
Inne/Aktywność5/: aktywnosc5.cpp  readme.md
Inne/Laboratorium9/: CMakeLists.txt  databaseLogger.cpp  databaseLogger.h  fileLogger.cpp  logger.cpp  logger.h  logowania.txt  logowania_db.db  main.cpp
Laboratorium1/: lab1.cpp  lab1_aktywnosc.cpp
Laboratorium10/: string_cw10.cpp
Laboratorium11/: lab11.cpp
Laboratorium12/: VectoredList.cpp  VectoredList.h  main.cpp
Laboratorium2/: lab2_cw1.cpp  lab2_cw2.cpp  lab2_cw3.cpp  lab2_cw4.cpp  lab2_cw5.cpp
Laboratorium3/: lab3_zad1.cpp  lab3_zad2.cpp  lab3_zad3.cpp
Laboratorium4/src/lab2/: matrix.cc  matrix.h  matrixTests.cc
Laboratorium4/src/utils/: programmerDetails.h
Laboratorium5/: zadania_1-4.cpp  zadanie_5.cpp
Laboratorium6/src/lab3/: fraction.cpp  fraction.h  vector.cpp  vector.h  vectorTests.cpp
Laboratorium6/src/utils/: programmerDetails.h
Laboratorium7/: operatory_przeciazone.cpp
Laboratorium8/src/lab4/: circle.h  rectangle.h  shape.h  shapecomposite.h  stage.h
Laboratorium8/src/utils/: programmerDetails.h
Laboratorium9/: CMakeLists.txt  consoleLogger.cpp  consoleLogger.h  databaseLogger.cpp  databaseLogger.h  fileLogger.cpp  fileLogger.h  logger.cpp  logger.h  logowania.txt  main.cpp
Projekt_PP2/: README.md  funkcje.cpp  funkcje.h  makra.h  przystanki.csv  sip  sip.cpp
